# newspicker

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
.github/workflows/: daily_podcast.yml  maintain_feeds.yml
agents/: __init__.py  android.py  editor.py  scout.py  voice.py  voice_concat.py
config/: feed_health.json  podcast_meta.yml  sources.yml
docs/: feed.xml  index.html  seen_urls.txt
docs/episodes/: 2026-02-21_002559.srt  2026-02-21_023527.srt  2026-02-21_035622.srt  2026-02-21_150349.srt  2026-02-21_155217.srt  2026-02-21_210442.srt  2026-02-22_095634.srt  2026-02-23_014206.srt  2026-02-23_060543.srt  2026-02-24_010636.srt  2026-02-25_061035.srt  2026-02-26_061018.srt  2026-02-27_061100.srt  2026-02-28_060700.srt  2026-03-01_111816.srt  2026-03-02_060441.srt  2026-03-03_061015.srt  2026-03-04_060941.srt  2026-03-08_060357.srt  2026-03-09_060507.srt  2026-03-11_060843.srt  2026-03-12_060908.srt  2026-03-13_060958.srt  2026-03-14_060924.srt  2026-03-15_060715.srt  2026-03-16_060644.srt  2026-03-17_061416.srt  2026-03-18_061217.srt  2026-03-19_061132.srt  2026-03-20_061059.srt  2026-03-20_144150.srt  2026-03-21_060746.srt  2026-03-22_060601.srt  2026-03-23_060648.srt  2026-03-24_061110.srt  2026-03-25_061219.srt  2026-03-26_061100.srt  2026-03-27_060919.srt  2026-03-28_061046.srt  2026-03-29_060742.srt  (+8 more)
scripts/: maintain_feeds.py  publish_to_github.py  run_pipeline.py
